[project]
name = "mask-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Forgman75",email = "agolikov2020@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]

[tool.mypy]
mypy_path = "src"                    # ← Корень для поиска модулей
explicit_package_bases = true        # ← Явные базовые пакеты
namespace_packages = true            # ← Поддержка namespace-пакетов
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 79
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов 
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | tests
  )/
  | poetry.lock       
                     
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119
multi_line_output = 3
